# Electric_Motor_Temperature

./: .gitignore  README.md  pyproject.toml
notebooks/: explore_data.ipynb
src/cfg/: data.py
src/visualisation/: viz.py
