[tool.poetry]
name = "electric-motor-temperature"
version = "0.1.0"
description = ""
authors = ["yannick77 <yannick.bodin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
numpy = "^2.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
